# asteroids-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build_distribution.sh
assets/: asteroid.assets.ron  enemy.size.ron  enemy.spawner.ron  game.assets.ron  menu.assets.ron  player.projectile.size.ron  player.size.ron
assets/animations/: enemy_explosion.anim.ron  player_engine.anim.ron
src/: asteroid.rs  main.rs  window.rs
src/asteroid/: actions.rs  assets.rs  border.rs  controller.rs  debug.rs  enemy.rs  ennemy.rs  game.rs  gameplay.rs  input.rs  layers.rs  macro_helpers.rs  mod.rs  physics.rs  player.rs  projectile.rs  states.rs  ui.rs  window.rs
src/asteroid/animation/: mod.rs
src/asteroid/audio/: game.rs  menu.rs  mod.rs  utils.rs
src/asteroid/core/: actions.rs  assets.rs  layers.rs  mod.rs  states.rs
src/asteroid/debug/: mod.rs
src/asteroid/editor/: mod.rs
src/asteroid/game/: border.rs  damage.rs  effects.rs  enemy.rs  gameplay.rs  mod.rs  player.rs  projectile.rs  scale.rs  setup.rs  ship.rs  spawner.rs  timed.rs
src/asteroid/input/: mod.rs
src/asteroid/physics/: collision.rs  mod.rs  movement.rs  obb.rs
src/asteroid/ui/: game.rs  menu.rs  mod.rs
src/asteroid/utils/: commands.rs  macros.rs  mod.rs  systems.rs  window.rs
